# llm-kitchen-sink

./: .aider.notes.json  .dockerignore  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
