[tool.poetry]
name = "llm-kitchen-sink"
version = "0.1.0"
description = ""
authors = ["Ryan Kleeberger <rylklee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aider-chat = "*"
llm = "*"
shell-gpt = "*"

[tool.poetry.group.dev.dependencies]
shell-gpt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
